# voebb-calendar-sync

./: Cargo.toml  README.md  client_secret.json  voebb_scraper-mac
src/: main.rs
